write swag comments
