# backend/internal/http-server/handlers/auth/signin.go
@@ -12,6 +12,16 @@ import (
 	"golang.org/x/crypto/bcrypt"
 )
 
+// @Summary Sign In
+// @Description This endpoint allows user to sign in using their email and passwd.
+// @Tags Authentication
+// @Accept json
+// @Produce json
+// @Param credentials body Credentials true "Credentials for signing in"
+// @Success 200 {object} tokenResponse
+// @Failure 401 {object} response.errorResponse
+// @Failure 400 {object} response.errorResponse
+// @Router /login/sign-in [post]
 func (h *AuthHandler) SignIn(w http.ResponseWriter, r *http.Request) {
 	var req Credentials
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
@@ -28,32 +38,32 @@ func (h *AuthHandler) SignIn(w http.ResponseWriter, r *http.Request) {
 	userRepository := repository.NewUserRepository(h.db)
 	user, err := userRepository.GetByEmail(req.Email)
 	if err != nil {
-		slog.Error("user not found", slog.String("error", err.Error()))
-		response.RespondWithError(w, r, http.StatusInternalServerError, "User not found")
+		slog.Error("Email or password is incorrect", slog.String("error", err.Error()))
+		response.RespondWithError(w, r, http.StatusUnauthorized, "Email or password is incorrect")
 		return
 	}
 
 	if err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(req.Password)); err != nil {
-		slog.Error("invalid password", slog.String("error", err.Error()))
-		response.RespondWithError(w, r, http.StatusBadRequest, "invalid password")
+		slog.Error("Email or password is incorrect", slog.String("error", err.Error()))
+		response.RespondWithError(w, r, http.StatusUnauthorized, "Email or password is incorrect")
 		return
 	}
 
 	accessToken, err := jwt.GenerateToken(&jwt.UserInfo{ID: user.ID}, h.cfg.JWT.AcessDuration, h.cfg.JWT.Key, "access")
 	if err != nil {
 		slog.Error("failed to generate access token", slog.String("error", err.Error()))
-		response.RespondWithError(w, r, http.StatusInternalServerError, "failed to generate access token")
+		response.RespondWithError(w, r, http.StatusUnauthorized, "Email or password is incorrect")
 		return
 	}
 	refreshToken, err := jwt.GenerateToken(&jwt.UserInfo{ID: user.ID}, h.cfg.JWT.RefreshDuration, h.cfg.JWT.Key, "refresh")
 	if err != nil {
 		slog.Error("failed to generate refresh token", slog.String("error", err.Error()))
-		response.RespondWithError(w, r, http.StatusInternalServerError, "failed to generate refresh token")
+		response.RespondWithError(w, r, http.StatusUnauthorized, "Email or password is incorrect")
 		return
 	}
 
-	response.RespondWithJSON(w, r, http.StatusOK, map[string]string{
-		"access_token":  accessToken,
-		"refresh_token": refreshToken,
+	response.RespondWithJSON(w, r, http.StatusOK, &tokenResponse{
+		AccessToken:  accessToken,
+		RefreshToken: refreshToken,
 	})
 }
